Converter fixes